# gpt-file-qa

./: .gitignore  README.md  file-qa.ipynb  pyproject.toml
